--- a/PlantPlaces/pom.xml
+++ b/PlantPlaces/pom.xml
@@ -46,9 +46,14 @@
 	  <version>2.2.9</version>
 	</dependency>
 	<dependency>
-	  <groupId>com.sun.faces</groupId>
-	  <artifactId>jsf-impl</artifactId>
-	  <version>2.2.9</version>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.mockito</groupId>
+	  <artifactId>mockito-all</artifactId>
+	  <version>1.9.5</version>
 	</dependency>
   </dependencies>
   <build>
