--- a/PlantPlaces/pom.xml
+++ b/PlantPlaces/pom.xml
@@ -60,6 +60,16 @@
 	  <artifactId>log4j</artifactId>
 	  <version>1.2.17</version>
 	</dependency>
+	<dependency>
+	  <groupId>org.hibernate</groupId>
+	  <artifactId>hibernate-core</artifactId>
+	  <version>4.3.6.Final</version>
+	</dependency>
+	<dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>5.1.31</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
