--- a/PlantPlaces/pom.xml
+++ b/PlantPlaces/pom.xml
@@ -70,6 +70,11 @@
 	  <artifactId>mysql-connector-java</artifactId>
 	  <version>5.1.31</version>
 	</dependency>
+	<dependency>
+	  <groupId>net.coobird</groupId>
+	  <artifactId>thumbnailator</artifactId>
+	  <version>[0.4,0.5)</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
